# muffin-mare

./: .gitignore  .gitmodules  AppImageBuilder.yml  CMakeLists.txt  README.md
.github/workflows/: build-linux.yml  build-windows.yml
assets/: liberation-mono-16.fnt
assets/muffins/img/: SuperMarioBrosNES.fnt
src/: MuffinsGame.cpp  MuffinsGame.h  main.cpp
src/components/: Derpy.h  Flash.h  Food.h  Particle.h  Position.h  Score.h
src/states/: FailState.cpp  FailState.h  GameplayState.cpp  GameplayState.h  TitleState.cpp  TitleState.h
src/systems/: DerpyFloat.cpp  DerpyFloat.h  FlashTimer.cpp  FlashTimer.h  FoodEvents.cpp  FoodEvents.h  FoodUpdate.cpp  FoodUpdate.h  RenderScore.cpp  RenderScore.h  UpdateParticles.cpp  UpdateParticles.h
